Modified content to work correctly on mobile

--- a/portfoliomobile.css
+++ b/portfoliomobile.css
@@ -125,18 +125,8 @@ sup {vertical-align: super;
 					-moz-transition: 0.5s ease-in;
 					-o-transition: 0.5s ease-in;}
 
-#bignickle {width: 322px !important;
-			height: 259px !important;
-			/**margin-left: 210.5px;
-			margin-right: 210.5px;**/}
-
-#newlogo {width: 322px !important;
-		height: 181px !important;
-		margin-top: 42px;
-		/**margin-left: 135.5px;
-		margin-left: 135.5px;**/}
-
-#homesteadcolor {color: #dc8f23;}
+#homesteadcolor {/**color: #dc8f23;**/
+				color: #00a2ff;}
 
 /**#imagealign1 {display: grid;
 			grid-row: 2/3;
@@ -161,6 +151,31 @@ sup {vertical-align: super;
 			margin-bottom: unset;
 			/**box-shadow: 3px 3px 5px #000000;**/
 			filter: drop-shadow(1px 5px 8px #000000);
+			opacity: 0;
+			transition: 0.5s ease-in;
+			-webkit-transition: 0.5s ease-in;
+			-moz-transition: 0.5s ease-in;
+			-o-transition: 0.5s ease-in;}
+
+#imagealign3 {grid-row: 4/5;
+			grid-column: 1/2;
+			/**width: 370px;**/
+			height: 200px;
+			/**margin-left: 100px;**/
+			/**margin-right: auto;**/
+			/**margin-bottom: 10px;**/
+			/**box-shadow: 3px 3px 5px #000000;**/
+			/**filter: drop-shadow(5px 5px 8px #000000);**/
+			opacity: 0;
+			transition: 0.5s ease-in;
+			-webkit-transition: 0.5s ease-in;
+			-moz-transition: 0.5s ease-in;
+			-o-transition: 0.5s ease-in;}
+
+#imagealign4 {grid-row: 5/6;
+			grid-column: 1/2;
+			/**box-shadow: 3px 3px 5px #000000;**/
+			/**filter: drop-shadow(5px 5px 8px #000000);**/
 			opacity: 0;
 			transition: 0.5s ease-in;
 			-webkit-transition: 0.5s ease-in;
@@ -194,6 +209,18 @@ sup {vertical-align: super;
 			-o-transition: 0.5s ease-in;}
 
 #textalign3 {grid-row: 4/5;
+			grid-column: 2/3;
+			display: flex;
+			align-items: center;
+			font-size: 18px;
+			text-align: center;
+			opacity: 0;
+			transition: 0.5s ease-in;
+			-webkit-transition: 0.5s ease-in;
+			-moz-transition: 0.5s ease-in;
+			-o-transition: 0.5s ease-in;}
+
+#textalign4 {grid-row: 5/6;
 			grid-column: 2/3;
 			display: flex;
 			align-items: center;
@@ -322,8 +349,8 @@ h2 {color: #FF0000; /**#B3C7E6**/
 				height: 100%;
 				float: left;}
 
-#slider ul li img {width: 575px;
-					height: 281px;}
+#slider ul li img {width: 322px !important;
+					height: 181px !important;}
 
 #slider #prev, #slider #next {width: 50px;
 							line-height: 50px;
@@ -335,7 +362,7 @@ h2 {color: #FF0000; /**#B3C7E6**/
 							color: #d5d5d5;
 							text-decoration: none;
 							position: absolute;
-							top: 32%;
+							top: 14% !important;
 							transform: translateY(-50%);
 							-webkit-transform: translateY(-50%);
 							-moz-transform: translateY(-50%);
@@ -356,6 +383,70 @@ h2 {color: #FF0000; /**#B3C7E6**/
 #slider #next {right: 1px;}
 
 /** ▲ Automatic Scrolling Images ▲ **/
+
+/** ▼ Automatic Scrolling Images 2 ▼ **/
+
+#slider2 {position: relative;
+		width: 575px;
+		height: 281px;
+		overflow: hidden;
+		/**box-shadow: 5px 5px 8px rgba(0, 0, 0, 1);**/
+		opacity: 0;
+		transition: 0.5s ease-in;
+		-webkit-transition: 0.5s ease-in;
+		-moz-transition: 0.5s ease-in;
+		-o-transition: 0.5s ease-in;}
+
+#slider2 ul {position: relative;
+			list-style: none;
+			height: 100%;
+			width: 10000%;
+			padding: 0;
+			margin: 0;
+			transition: all 750ms ease;
+			-webkit-transition: all 750ms ease;
+			-moz-transition: all 750ms ease;
+			-o-transition: all 750ms ease;
+			left: 0;}
+
+#slider2 ul li {position: relative;
+				height: 100%;
+				float: left;}
+
+#slider2 ul li img {width: 575px;
+					height: 281px;}
+
+#slider2 #prev2, #slider2 #next2 {width: 50px;
+							line-height: 50px;
+							border-radius: 50%;
+							font-size: 3rem;
+							/**text-shadow: 0 0 20px rgba(0, 0, 0, 0.6);**/
+							text-shadow: 0px 2px 5px rgba(0, 0, 0, 1);
+							text-align: center;
+							color: #d5d5d5;
+							text-decoration: none;
+							position: absolute;
+							top: 32%;
+							transform: translateY(-50%);
+							-webkit-transform: translateY(-50%);
+							-moz-transform: translateY(-50%);
+							-ms-transform: translateY(-50%);
+							-o-transform: translateY(-50%);
+							transition: all 150ms ease;
+							-webkit-transition: all 150ms ease;
+							-moz-transition: all 150ms ease;
+							-o-transition: all 150ms ease;}
+
+#slider2 #prev2:hover, #slider2 #next2:hover {/**background-color: rgba(0, 0, 0, 0.5);**/
+											text-shadow: 0;
+											color: #FF0000;
+											/**font-size: 3.5rem;**/}
+
+#slider2 #prev2 {left: 1px;}
+
+#slider2 #next2 {right: 1px;}
+
+/** ▲ Automatic Scrolling Images 2 ▲ **/
 
 main {background-color: #FFFFFF;
 	color: #000000;
